fix(public): change html and body overflow-x to clip to allow sticky sidebar positioning work perfectly

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -33,7 +33,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
   background: var(--background);
   color: var(--foreground);
   transition: background-color 0.3s, color 0.3s;
